--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -185,6 +185,36 @@ button {
     .MuiToggleButtonGroup-grouped
   ):not(.MuiCheckbox-root):not(.MuiMenuItem-root):not(.color-button) {
   background-color: $primary-color !important;
+
+  &.blue {
+    background-color: $picker-color-blue !important;
+  }
+
+  &.red {
+    background-color: $picker-color-red !important;
+  }
+
+  &.yellow {
+    background-color: $picker-color-yellow !important;
+    color: $black;
+  }
+
+  &.green {
+    background-color: $picker-color-green !important;
+  }
+  &.orange {
+    background-color: $picker-color-orange !important;
+  }
+
+  &.deepPurple {
+    background-color: $picker-color-deep-purple !important;
+  }
+  &.purple {
+    background-color: $picker-color-purple !important;
+  }
+  &.pink {
+    background-color: $picker-color-pink !important;
+  }
 }
 .MuiCheckbox-root {
   background-color: transparent;
