Style UserDetails to have proper scrolling, fix Skeleton rendering logic ItemSearch

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -342,7 +342,11 @@ select {
   }
 }
 
+// Speed Dial setup
+
 .MuiSpeedDial-root {
+  &.dark-mode {
+  }
   &.primary {
     .MuiFab-circular {
       background-color: $primary-color !important;
