--- a/src/pages/UserDetails/styles/UserDetails.scss
+++ b/src/pages/UserDetails/styles/UserDetails.scss
@@ -1,6 +1,7 @@
 .user-page {
-  padding: 16px;
-  display: grid;
+  // padding: 16px;
+  // display: grid;
+  align-items: start;
   gap: 16px;
   .MuiAccordionSummary-root {
     // padding: 0;
@@ -13,6 +14,10 @@
       display: grid;
       gap: 1rem;
     }
+  }
+
+  .user-details {
+    margin-top: 1rem;
   }
 
   .profile-container {
@@ -33,6 +38,11 @@
   }
 }
 
+.content-container {
+  display: grid;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
 .card.user-details {
   height: fit-content;
   display: grid;
@@ -60,7 +70,7 @@
 
     .color-button {
       &.css-r75yrr-MuiButtonBase-root-MuiButton-root {
-        min-width: 30px !important;
+        // min-width: 30px !important;
       }
       width: 30px;
       height: 30px;
