Add basic BarcodeScanner cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,6 +40,7 @@
 @import '../../components/LoggedList/styles/LoggedList.scss';
 @import '../../components/LinearMacrosProgress/styles/LinearMacrosProgress.scss';
 @import '../../components/GoalBanner/styles/GoalBanner.scss';
+@import '../../components/BarcodeScanner/styles/BarcodeScanner.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
