Add CustomButton, fix minor edit user bugs

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -51,6 +51,7 @@
 @import '../../CustomMui/CustomSelect/styles/CustomSelect.scss';
 @import '../../CustomMui/CustomLinearProgress/styles/CustomLinearProgress.scss';
 @import '../../CustomMui/CustomAccordion/styles/CustomAccordion.scss';
+@import '../../CustomMui/CustomButton/styles/CustomButton.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
