--- a/src/components/EditMeal/styles/EditMeal.scss
+++ b/src/components/EditMeal/styles/EditMeal.scss
@@ -1,8 +1,8 @@
 .edit-meal-container {
+  // height: 100%;
   display: grid;
-  // grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto 1fr auto;
 
-  align-items: start;
   text-align: center;
 
   gap: 1rem;
@@ -15,5 +15,16 @@
   .placeholder {
     opacity: 0.7;
     font-size: 0.95rem;
+  }
+
+  .edit-meal-footer {
+    display: grid;
+    gap: 1rem;
+
+    .buttons-container {
+      display: grid;
+      grid-auto-flow: column;
+      gap: 1rem;
+    }
   }
 }
