--- a/src/CustomMui/CustomButton/styles/CustomButton.scss
+++ b/src/CustomMui/CustomButton/styles/CustomButton.scss
@@ -34,4 +34,9 @@
   .custom-button.MuiButton-root {
     // box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6), 0 2px 8px rgba(0, 0, 0, 0.5);
   }
+
+  &.disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 }
