--- a/src/components/EditMeal/styles/EditMeal.scss
+++ b/src/components/EditMeal/styles/EditMeal.scss
@@ -1,5 +1,5 @@
 .edit-meal-container {
-  // height: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
 
@@ -20,10 +20,21 @@
   .stage-container {
     display: grid;
     gap: 1rem;
+    height: 360px;
+
+    .card {
+      margin-bottom: 1rem;
+    }
+
+    .animation-container {
+      justify-self: center;
+      width: 300px;
+      height: 300px;
+    }
 
     .edit-meal-list {
-      height: 180px;
       overflow-y: auto;
+      // height: 180px;
     }
 
     .edit-meal-macros-distribution {
