--- a/src/CustomMui/CustomList/styles/CustomList.scss
+++ b/src/CustomMui/CustomList/styles/CustomList.scss
@@ -1,4 +1,11 @@
 .custom-list {
+  &.dark-mode {
+    .MuiListItemText-secondary {
+      // color: $dark-gray;
+      opacity: 0.7;
+      color: $white;
+    }
+  }
   .custom-list-item {
     gap: 1em;
 
