--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -12,6 +12,11 @@ body {
   // position: static;
   // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  *:not(input, textarea) {
+    user-select: none;
+    -webkit-user-select: none;
+  }
+
   width: 100%;
   height: 100%;
   // min-height: 100vh;
