Add visual indication of today and today button

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -107,6 +107,10 @@ p {
 
   button:not(.favorite-button) {
     color: $white;
+
+    &.Mui-disabled {
+      color: $medium-gray;
+    }
   }
 
   outline: none;
