--- a/src/components/TimesContainer/styles/TimesContainer.scss
+++ b/src/components/TimesContainer/styles/TimesContainer.scss
@@ -20,7 +20,8 @@
       font-size: 2em;
     }
     &.date {
-      font-weight: 500;
+      // font-weight: 500;
+      transition: 0.2s;
     }
   }
   .clock-container.dark-clock {
