--- a/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
+++ b/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
@@ -1,6 +1,9 @@
 .fixed-bottom-navigation {
   .MuiPaper-root {
     padding: 1em !important;
+    will-change: transform;
+    transform: translateZ(0);
+    z-index: 1100;
   }
   padding-bottom: 1.5em !important;
 
