--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -17,6 +17,13 @@ body {
     -webkit-user-select: none;
   }
 
+  // Hide scrollbar
+  scrollbar-width: none !important; /* Firefox */
+  -ms-overflow-style: none !important; /* Internet Explorer and Edge */
+  &::-webkit-scrollbar {
+    display: none !important; /* Chrome, Safari */
+  }
+
   width: 100%;
   height: 100%;
   // min-height: 100vh;
