--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -42,6 +42,7 @@
 @import '../../components/GoalBanner/styles/GoalBanner.scss';
 @import '../../components/BarcodeScanner/styles/BarcodeScanner.scss';
 @import '../../components/EditMeal/styles/EditMeal.scss';
+@import '../../components/ScreenLoader/styles/ScreenLoader.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
