--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -76,6 +76,7 @@ $medium-red: #e53935;
 $dark-red: #b71c1c;
 
 // Shades of Gray
+
 $light-gray: #e0e0e0;
 $medium-gray: #9e9e9e;
 
@@ -88,8 +89,9 @@ $neutral-gray: #f5f5f5;
 $white: #fff;
 $black: #000;
 
-$header-height: 68px;
-$header-margin: 82px;
+// $header-height: 68px;
+$header-height: 55px;
+$header-margin: 70px;
 
 $card-height: 240px;
 $circular-progress-size: 160px;
