--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -17,15 +17,19 @@ body {
     -webkit-user-select: none;
   }
 
-  // Hide scrollbar
-  scrollbar-width: none !important; /* Firefox */
-  -ms-overflow-style: none !important; /* Internet Explorer and Edge */
-  &::-webkit-scrollbar {
-    display: none !important; /* Chrome, Safari */
-    width: 0 !important;
-    height: 0 !important;
-    background-color: transparent !important;
-    z-index: -10;
+  &,
+  main,
+  .page-container {
+    // Hide scrollbar
+    scrollbar-width: none !important; /* Firefox */
+    -ms-overflow-style: none !important; /* Internet Explorer and Edge */
+    &::-webkit-scrollbar {
+      display: none !important; /* Chrome, Safari */
+      width: 0 !important;
+      height: 0 !important;
+      background-color: transparent !important;
+      z-index: -10;
+    }
   }
 
   overflow: hidden;
