Add search first animation, icons to CustomToggle

--- a/src/CustomMui/CustomToggle/styles/CustomToggle.scss
+++ b/src/CustomMui/CustomToggle/styles/CustomToggle.scss
@@ -9,3 +9,14 @@
     }
   }
 }
+
+.custom-toggle {
+  max-width: 100%;
+  overflow-x: auto;
+
+  .MuiToggleButtonGroup-groupedHorizontal {
+    display: flex;
+    gap: 0.5rem;
+    font-size: 0.8rem;
+  }
+}
