--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -59,6 +59,11 @@
       color: $light-gray;
     }
   }
+
+  .search-first {
+    padding: 0em 1rem;
+    text-align: center;
+  }
 }
 
 .item-search .results {
