--- a/src/pages/UserDetails/styles/UserDetails.scss
+++ b/src/pages/UserDetails/styles/UserDetails.scss
@@ -57,6 +57,7 @@
 .color-prefs-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto 1fr;
 
   // display: flex;
   // align-items: center;
@@ -65,7 +66,11 @@
   .color-options {
     justify-self: end;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    // grid-template-columns: 1fr 1fr;
+
     gap: 1rem;
 
     .color-button {
