Add basic BmrCard

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -43,6 +43,8 @@
 @import '../../components/BarcodeScanner/styles/BarcodeScanner.scss';
 @import '../../components/EditMeal/styles/EditMeal.scss';
 @import '../../components/ScreenLoader/styles/ScreenLoader.scss';
+@import '../../components/WeightCard/styles/WeightCard.scss';
+@import '../../components/BmrCard/styles/BmrCard.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
