--- a/src/CustomMui/CustomSelect/styles/CustomSelect.scss
+++ b/src/CustomMui/CustomSelect/styles/CustomSelect.scss
@@ -1,3 +1,12 @@
 .MuiMenu-list {
   max-height: 200px;
 }
+
+.dark-mode {
+  .MuiSelect-select {
+    // outline: 1px solid $white;
+    // box-shadow: 0 0 0 1px $white;
+    // border: 1px solid $white;
+    // box-shadow: rgba(255, 255, 255, 0.21) 1.95px 1.95px 2.6px;
+  }
+}
