Fix several minor macros calories calc

--- a/src/pages/Diary/styles/Diary.scss
+++ b/src/pages/Diary/styles/Diary.scss
@@ -77,24 +77,24 @@
     border-bottom: 2px solid $primary-color;
   }
   &.blue {
-    color: $picker-color-blue;
+    border-bottom: 2px solid $picker-color-blue;
   }
   &.red {
-    color: $picker-color-red;
+    border-bottom: 2px solid $picker-color-red;
   }
   &.green {
-    color: $picker-color-green;
+    border-bottom: 2px solid $picker-color-green;
   }
   &.orange {
-    color: $picker-color-orange;
+    border-bottom: 2px solid $picker-color-orange;
   }
   &.deepPurple {
-    color: $picker-color-deep-purple;
+    border-bottom: 2px solid $picker-color-deep-purple;
   }
   &.purple {
-    color: $picker-color-purple;
+    border-bottom: 2px solid $picker-color-purple;
   }
   &.pink {
-    color: $picker-color-pink;
+    border-bottom: 2px solid $picker-color-pink;
   }
 }
