--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,6 +45,7 @@
 @import '../../components/ScreenLoader/styles/ScreenLoader.scss';
 @import '../../components/WeightCard/styles/WeightCard.scss';
 @import '../../components/BmrCard/styles/BmrCard.scss';
+@import '../../components/EditUser/styles/EditUser.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 
